# tirex

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements_py24.yaml  requirements_py26.yaml
examples/nasdaq_forecast/: nasdaq_forecast.py
examples/opt_forecast/: dual_opt_price_forecast.py  opt_ft_price_forecast.py  opt_price_forecast.py
examples/training/: CRYPTO_FINETUNING_GUIDE.md  README.md  RETRAINING_GUIDE.md  prepare_crypto_data.py  training_example.py
src/tirex/utils/: __init__.py  plot.py
tests/: __init__.py  test_bitmex.py  test_bitmex_auth.py  test_bitmex_client.py  test_bitmex_continuity.py  test_bitmex_gap_filling.py  test_bitmex_latest_demo.py  test_bitmex_latest_unit.py  test_bitmex_plot.py  test_bitmex_simple_correctness.py  test_bitmex_transforms.py  test_bitmex_visual_comparison.py  test_ceemdan.py  test_dt_parameter.py  test_filters.py  test_forecast_adapter.py  test_plot.py  test_trade.py  test_wavelets.py
tests/data/: btcusd_2022-06-01.joblib  sequences.joblib
tirex/: __init__.py  base.py
tirex/forecast/: dual_prediction.py
tirex/models/: mixed_stack.py
tirex/utils/: __init__.py  binance.py  bitmex.py  bitmex_auth.py  bitmex_bck.py  bitmex_client.py  bitmex_latest.py  bitmex_plot.py  bitmex_refactored.py  bitmex_transforms.py  ceemdan.py  cost_function.py  ewt.py  filters.py  path.py  plot.py  rescale.py  ssa.py  time.py  trade.py
