[project]
name = "tirex"
version = "1.0.0"
description = "A pre-trained Time Series Forecasting Model based on xLSTM supporting zero-shot forecasting"
authors = [
  { name="Andreas Auer", email="andreas.auer@nx-ai.com" },
]
license = {text = "LICENSE"} # Changed from file= to text=
readme = "README.md"
requires-python = ">=3.11"
keywords = ["TiRex", "xLSTM", "Time Series", "Zero-shot", "Deep Learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [ # This is the correct location and format for PEP 621
    "torch",
    "torchvision",
    "xlstm",
    "einops",
    "ninja",
    "huggingface-hub",
    "lightning",
    "numpy",
    "pandas",
    "dacite",
    "tqdm"
]

[project.urls] # Moved after dependencies
Homepage = "https://github.com/NX-AI/tirex" # Added Homepage
Repository = "https://github.com/Rlahuerta/tirex.git"
Issues = "https://github.com/NX-AI/tirex/issues"
Documentation = "https://github.com/NX-AI/tirex/blob/main/README.md" # Added Documentation

[project.optional-dependencies]
notebooks = ["ipykernel"]
gluonts = ["gluonts"]
hfdataset = ["datasets"]
all = ["ipykernel", "gluonts", "datasets"]

[tool.poetry] # Minimal poetry section for group dependencies
# name, version, authors, etc., are now in [project]

[tool.poetry.group.dev.dependencies]
ipykernel = {version = "*", optional = true}
gluonts = {version = "*", optional = true}
datasets = {version = "*", optional = true}
pytest-cov = "*"

# build system
[build-system]
requires = ["poetry-core>=1.0.0"] # Changed for Poetry
build-backend = "poetry.core.masonry.api" # Changed for Poetry

# docformatter
[tool.docformatter]
diff = false
docstring-length = [40, 1000]
in-place = true
pre-summary-newline = true
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
non-cap = ["TiRex", "xLSTM", "sLSTM"]

# ruff
[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "archive",
]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["I001"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "tirex", "local-folder"]

[tool.ruff.lint.isort.sections]
"tirex" = ["tirex"]

[tool.pytest.ini_options]
addopts = "--cov=src/tirex --cov-report=term-missing"
